@@ -34,10 +34,12 @@ GNUCASH_MAJOR_VERSION=1
 GNUCASH_MINOR_VERSION=7
 GNUCASH_MICRO_VERSION=0
 GNUCASH_VERSION=$GNUCASH_MAJOR_VERSION.$GNUCASH_MINOR_VERSION.$GNUCASH_MICRO_VERSION
+GNUCASH_BUILD_DATE=`date --iso-8601=date`
 
 AC_SUBST(GNUCASH_MAJOR_VERSION)
 AC_SUBST(GNUCASH_MINOR_VERSION)
 AC_SUBST(GNUCASH_MICRO_VERSION)
+AC_SUBST(GNUCASH_BUILD_DATE)
 
 AM_INIT_AUTOMAKE(gnucash,$GNUCASH_VERSION)
 
@@ -48,6 +50,7 @@ AM_CONFIG_HEADER(config.h)
 AC_DEFINE_UNQUOTED(GNUCASH_MAJOR_VERSION, $GNUCASH_MAJOR_VERSION)
 AC_DEFINE_UNQUOTED(GNUCASH_MINOR_VERSION, $GNUCASH_MINOR_VERSION)
 AC_DEFINE_UNQUOTED(GNUCASH_MICRO_VERSION, $GNUCASH_MICRO_VERSION)
+AC_DEFINE_UNQUOTED(GNUCASH_BUILD_DATE, "$GNUCASH_BUILD_DATE", When configure was last run)
 
 dnl Set of available languages.
 ALL_LINGUAS="da de en_GB es es_NI fr hu it ja no pt pt_BR ru sv"
